<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_above="@+id/view_botton"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <include layout="@layout/view_header"/>
        <RelativeLayout
                android:id="@+id/fragment_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <TextView
            android:id="@+id/view_no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:visibility="visible"
            android:textSize="20sp"
            android:text="nodata"/>
    <thn.android.vn.draggableview.DraggablePanel
            android:id="@+id/draggable_panel"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

        <RelativeLayout
                android:id="@+id/top_view_video"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

            <ImageView
                    android:id="@+id/thumbnail_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-35dp"
                    android:contentDescription="@string/app_name"
                    android:layout_marginBottom="-35dp"
                    android:adjustViewBounds="true"
                    android:visibility="invisible" />
        </RelativeLayout>
    </thn.android.vn.draggableview.DraggablePanel>
    <!--<LinearLayout-->
            <!--android:layout_above="@+id/view_botton"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->
        <!---->
    <!--</LinearLayout>-->
    <include layout="@layout/view_bottom"/>
    
    <RelativeLayout
            android:id="@+id/view_delete_action"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:background="@color/bg_white">
        <EditText
                android:id="@+id/txt_comment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/view_action"
                android:hint="@string/hin_comment"
                android:gravity="top"
                android:padding="@dimen/padding_10"
                android:textColor="@color/text_black"/>
        <LinearLayout
                android:id="@+id/view_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_20"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:weightSum="2">

            <Button
                    android:id="@+id/btn_cancle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_5"
                    android:text="@string/lb_cancle"
                    android:textAllCaps="false"
                    android:textColor="@color/txt_white"
                    android:background="@drawable/button_blue"
                    android:layout_weight="1" />

            <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="0dp"
                    android:textAllCaps="false"
                    android:layout_height="wrap_content"
                    android:text="@string/lb_delete"
                    android:textColor="@color/txt_white"
                    android:background="@drawable/button_red"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:layout_marginRight="@dimen/margin_20"
                    android:layout_weight="1" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>


